kubernetes/apps/hermes-agent/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent-dashboard
  namespace: hermes-agent
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "hermes-dashboard.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: hermes-agent
          port: 9119

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent-openai-api
  namespace: hermes-agent
spec:
  parentRefs:
    - name: eg-private
      namespace: envoy-gateway-system
      sectionName: https-admin
  hostnames:
    - "hermes-openai-api.admin.michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: hermes-agent
          port: 8642
